[gd_scene load_steps=6 format=3 uid="uid://sxcleyw27unb"]

[ext_resource type="Script" uid="uid://bt60jqcc4gtkc" path="res://scenes/ui/main_menu/main_menu.gd" id="1_qt1dd"]
[ext_resource type="Texture2D" uid="uid://de42mht2bjcm8" path="res://assets/menus/pause.png" id="2_cmwxi"]
[ext_resource type="FontFile" uid="uid://7afqfta6djj5" path="res://assets/menus/stocky.ttf" id="3_r70wa"]
[ext_resource type="AudioStream" uid="uid://bqgbxsy3qgv5s" path="res://scenes/ui/main_menu/mainmenu.mp3" id="4_cmwxi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x2yvf"]
texture = ExtResource("2_cmwxi")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qt1dd")

[node name="BackgroundImagePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x2yvf")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.5
offset_top = -161.0
offset_right = 312.5
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.478431, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("3_r70wa")
theme_override_font_sizes/font_size = 77
text = "DAWdventures"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.59
anchor_right = 0.5
anchor_bottom = 0.59
offset_left = -62.0
offset_top = -51.0
offset_right = 62.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r70wa")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="CreditsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_r70wa")
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cmwxi")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
